# SPL

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup_associations.py  verify.py
docs/: builtins.md  logo.icns  logo.xcf  syntax.md
examples/: concurrency.spl  fil.spl  hello.spl
src/: __init__.py  cli.py  compiler.py  concurrency.py  custom_builtins.py  interpreter.py  lexer.py  parser.py  runtime.py  type_checker.py  version.py  visual_debugger.py
src/spl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: __init__.py
