[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spl"
version = "1.0.0"
description = "Swahili Programming Language"
authors = [
    {name = "JACK T BOMBO", email = "jdonwell@proton.me"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Swahili",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["swahili", "programming", "language"]

[project.urls]
Homepage = "https://github.com/JackDonwel"
Repository = "https://github.com/JackDonwel/SPL"

[project.scripts]
spl = "src.cli:main"