[metadata]
name = spl
version = 1.0.0
description = Swahili Programming Language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JackDonwel/spl
author = Jack Donwell
author_email = jdonwel@proton.me
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Interpreters
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    termcolor
    llvmlite

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    spl = src.cli:main